k8s/domains/entitlements/components/api/infra/overlays/prod-eu/entitlements-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: entitlements-api
spec:
  template:
    spec:
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: entitlements-api
          volumeMounts:
            - name: tmp
              mountPath: /tmp
